# robot_demo

./: README.md  map_1730641688.pgm  map_1730641688.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_bringup/share/bumperbot_bringup/: package.sh
install/bumperbot_controller/lib/bumperbot_controller/: noisy_controller
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_lifecycle_node  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_firmware/lib/bumperbot_firmware/: simple_serial_transmitter
install/bumperbot_firmware/share/bumperbot_firmware/: package.sh
install/bumperbot_localization/lib/bumperbot_localization/: imu_republisher
install/bumperbot_localization/share/bumperbot_localization/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_localization/: package.xml
src/bumperbot_mapping/: CMakeLists.txt
src/bumperbot_navigation/: CMakeLists.txt
src/bumperbot_navigation/config/: global_costmap.yaml  local_costmap.yaml
src/bumperbot_navigation/launch/: global_costmap.launch.py  local_costmap.launch.py
src/bumperbot_utils/: CMakeLists.txt
(+23 files in other folders)
