# cmake_minimum_required(VERSION 3.8)
# project(bumperbot_navigation)

# # Find dependencies
# find_package(ament_cmake REQUIRED)
# find_package(rclcpp REQUIRED)
# find_package(rclpy REQUIRED)
# find_package(nav2_costmap_2d REQUIRED)
# find_package(launch REQUIRED)
# # find_package(launch_ros REQUIRED)


# install(DIRECTORY launch config 
#   DESTINATION share/${PROJECT_NAME}
# )

# # Install any necessary Python modules
# ament_python_install_package(${PROJECT_NAME})

# ament_package()

# cmake_minimum_required(VERSION 3.8)
# project(bumperbot_navigation)

# if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
#   add_compile_options(-Wall -Wextra -Wpedantic)
# endif()

# find_package(ament_cmake REQUIRED)
# find_package(ament_cmake REQUIRED)
# find_package(rclcpp REQUIRED)
# find_package(nav2_costmap_2d REQUIRED)

# install(
#   DIRECTORY launch config
#   DESTINATION share/${PROJECT_NAME}
# )

# ament_package()